--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title>Hello, World!</title>
+    <title>what's happening</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
     <div class="flexcontainer">
-      <button id="button">Click me!</button>
+      <button id="button">hey</button>
     </div>
     <script src="javascript/main.js"></script>
   </body>
